@@ -953,6 +953,187 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testNumTerms
+specifier|public
+name|void
+name|testNumTerms
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|f
+init|=
+literal|"name"
+decl_stmt|;
+for|for
+control|(
+name|String
+name|n
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"2"
+block|,
+literal|"3"
+block|,
+literal|"100"
+block|,
+literal|"99999"
+block|}
+control|)
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/admin/luke"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|f
+argument_list|,
+literal|"numTerms"
+argument_list|,
+name|n
+argument_list|)
+argument_list|,
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int[@name='Apache']"
+argument_list|,
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int[@name='Solr']"
+argument_list|,
+literal|"count("
+operator|+
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int)=2"
+argument_list|)
+expr_stmt|;
+block|}
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/admin/luke"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|f
+argument_list|,
+literal|"numTerms"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|,
+comment|// no garuntee which one we find
+literal|"count("
+operator|+
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int)=1"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/admin/luke"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|f
+argument_list|,
+literal|"numTerms"
+argument_list|,
+literal|"0"
+argument_list|)
+argument_list|,
+literal|"count("
+operator|+
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int)=0"
+argument_list|)
+expr_stmt|;
+comment|// field with no terms shouldn't error
+for|for
+control|(
+name|String
+name|n
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"0"
+block|,
+literal|"1"
+block|,
+literal|"2"
+block|,
+literal|"100"
+block|,
+literal|"99999"
+block|}
+control|)
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/admin/luke"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"bogus_s"
+argument_list|,
+literal|"numTerms"
+argument_list|,
+name|n
+argument_list|)
+argument_list|,
+literal|"count("
+operator|+
+name|field
+argument_list|(
+name|f
+argument_list|)
+operator|+
+literal|"lst[@name='topTerms']/int)=0"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testCopyFieldLists
 specifier|public
 name|void
