@@ -100,6 +100,9 @@ Bug Fixes
   when generating collations involving multiple word-break corrections.
   (James Dyer)
 
+* SOLR-5107: Fixed NPE when using numTerms=0 in LukeRequestHandler
+  (Ahmet Arslan, hossman)
+
 Optimizations
 ----------------------
 
